Fixed menu collapse function

--- a/less/custom.less
+++ b/less/custom.less
@@ -8,7 +8,7 @@ body {
   padding-top: 0px !important;
   height: 100% !important;
   min-height:100% !important;
-  background: url(http://subtlepatterns.com/patterns/brushed.png) repeat;
+  background: #222;
 }
 .main-nav {
   position:relative!important;
@@ -56,10 +56,11 @@ ul.nav.nav-pills.account-sub-links li {
 }
 #site-canvas {
   width: 100%;
-  height: 100%;
+  min-height: 100%;
+  height: auto;
   position: relative;
   padding-top:10px;
-  padding-left:30px;
+  padding-left:40px;
   
   -webkit-transform: translateX(0);
   transform: translateX(0);
